--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Segundo Año/Diseño Interfaces DI/Calculadora/target/
 /Segundo/DiseñoInterfacesDI/Calculadora/target/
+/Segundo/InterfacesDI/Calculadora/target/
