--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Segundo Año/Diseño Interfaces DI/Calculadora/target/
 /Segundo/DiseñoInterfacesDI/Calculadora/target/
 /Segundo/InterfacesDI/Calculadora/target/
+/Segundo/InterfacesDI/Calculadora/nbproject/private/
+/Segundo/InterfacesDI/Calculadora/build/
