--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /Segundo/InterfacesDI/Calculadora/target/
 /Segundo/InterfacesDI/Calculadora/nbproject/private/
 /Segundo/InterfacesDI/Calculadora/build/
+/Segundo/InterfacesDI/Tarea1_Boda/nbproject/private/
+/Segundo/InterfacesDI/Tarea1_Boda/build/
+/Segundo/InterfacesDI/OrganizadorBoda/nbproject/private/
+/Segundo/InterfacesDI/OrganizadorBoda/build/
