--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /Segundo/InterfacesDI/Tarea1_Boda/build/
 /Segundo/InterfacesDI/OrganizadorBoda/nbproject/private/
 /Segundo/InterfacesDI/OrganizadorBoda/build/
+/Segundo/InterfacesDI/Layouts/Ejercicio1/target/
+/Segundo/InterfacesDI/Layouts/Ejercicio2/target/
+/Segundo/InterfacesDI/Layouts/Ejercicio3/target/
+/Segundo/InterfacesDI/JavaApplication5/nbproject/private/
