--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 /Segundo/InterfacesDI/Layouts/Ejercicio2/target/
 /Segundo/InterfacesDI/Layouts/Ejercicio3/target/
 /Segundo/InterfacesDI/JavaApplication5/nbproject/private/
+/Segundo/InterfacesDI/Tarea1_Unidad2/target/
+/Segundo/InterfacesDI/mavenproject1/target/
+/Segundo/InterfacesDI/Unidad2Tarea1/target/
+/Segundo/InterfacesDI/TareaUnidad2/target/
